; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_utility_hook.c_PlanAlterObjectDependsStmt.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_utility_hook.c_PlanAlterObjectDependsStmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@NIL = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__*, i8*)* @PlanAlterObjectDependsStmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @PlanAlterObjectDependsStmt(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i8*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %13 [
    i32 128, label %9
    i32 129, label %9
  ]

9:                                                ; preds = %2, %2
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32* @PlanAlterFunctionDependsStmt(%struct.TYPE_4__* %10, i8* %11)
  store i32* %12, i32** %3, align 8
  br label %15

13:                                               ; preds = %2
  %14 = load i32*, i32** @NIL, align 8
  store i32* %14, i32** %3, align 8
  br label %15

15:                                               ; preds = %13, %9
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}

declare dso_local i32* @PlanAlterFunctionDependsStmt(%struct.TYPE_4__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
